<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_gravity="center"
        android:id = "@+id/purchaseuser"
        />

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/useremail"
        android:layout_gravity="center"
        android:id = "@+id/purchaseemail"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/PASSWORD"
        android:layout_gravity="center"
        android:id = "@+id/purchasepass"

        >
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/END"
        android:layout_gravity="center"
        android:id = "@+id/purchaseend"

        >
    </Button>


</LinearLayout>