<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".RegisterFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity = "start"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        > </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password">
        </TextView>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/REGISTER"
            android:id = "@+id/loginfragmentButton2"
            android:layout_gravity = "center"
            >
        </Button>

    </LinearLayout>
















    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity = "end"
        >
        <EditText
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint = "@string/placeholder"
            android:id = "@+id/usernameedittext"
            android:padding="0dp"
            android:gravity = "end"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder"
            android:padding="0dp"
            android:id = "@+id/emailedittext"
            />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder"
            android:id = "@+id/passwordedittext"
            android:padding="0dp"
            />

    </LinearLayout>






</LinearLayout>