<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id = "@+id/fragmentloginetusr"
            />

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:id = "@+id/fragmentloginetpass"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/LOGIN"
            android:layout_gravity="center"
            android:id = "@+id/loginfragmentButton1"

            >
        </Button>


</LinearLayout>